--- a/portfolio2.html
+++ b/portfolio2.html
@@ -23,6 +23,9 @@
                   </li>  
                 </ul>
                 </div>
-<img src="http://i36.photobucket.com/albums/e28/folayanc/black%20lady_zpsyoxmujrv.jpg">       
-</body>
+       <div class="projectgallery">
+
+       </div>
+
+            </body>
 </HTML>
